<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FormParentLayoutStyle">
    <TextView
        style="@style/LabelStyle"
        android:text="@string/login"/>
    <EditText
        android:id="@+id/loginEditLoginAct"
        style="@style/EditTextStyle"
        android:inputType="text" />
    <TextView
        style="@style/LabelStyle"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/passEditLoginAct"
        style="@style/EditTextStyle"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/okBtnLoginAct"
        style="@style/LoginButtonStyle"/>
    <ImageView
        android:id="@+id/loadImageLoginAct"
        android:src="@drawable/ic_loading"
        android:contentDescription="@string/loading"
        style="@style/LayoutWrapContent"/>
    <TextView
        style="@style/ErrorMessageStyle"
        android:id="@+id/errorMessageLoginAct"
        android:text="@string/incorrect_login_or_password"
        />

</LinearLayout>