<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deviceAddFragment"
    style="@style/FormParentLayoutStyle">
    <TextView
        android:id="@+id/deviceAddKeyLabel"
        style="@style/LabelStyle"
        android:text="@string/device_key" />
    <EditText
        android:id="@+id/deviceAddKey"
        style="@style/EditTextStyle"
        android:inputType="text"
        android:layout_below="@+id/deviceAddKeyLabel"/>
    <TextView
        android:id="@+id/deviceAddTitleLabel"
        style="@style/LabelStyle"
        android:text="@string/device_title"
        android:layout_below="@+id/deviceAddKey" />
    <EditText
        android:id="@+id/deviceAddTitle"
        style="@style/EditTextStyle"
        android:inputType="text"
        android:layout_below="@+id/deviceAddTitleLabel"/>
    <Button
        android:id="@+id/deviceAddButtonsSubmit"
        android:layout_below="@+id/deviceAddTitle"
        style="@style/SubmitButtonStyle" />
    <Button
        android:id="@+id/deviceAddButtonsReset"
        android:layout_alignTop="@+id/deviceAddButtonsSubmit"
        android:layout_toLeftOf="@+id/deviceAddButtonsSubmit"
        style="@style/ResetButtonStyle" />
    <ImageView
        android:id="@+id/deviceAddLoadImage"
        android:src="@drawable/ic_loading"
        android:layout_below="@+id/deviceAddButtonsReset"
        android:contentDescription="@string/loading"
        style="@style/LayoutWrapContent" />
    <TextView
        android:id="@+id/deviceAddErrorMessage"
        style="@style/ErrorMessageStyle"
        android:layout_below="@+id/deviceAddLoadImage"/>
</RelativeLayout>

